--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -125,6 +125,10 @@
             "require": "./dist/pkg/cjs/shared/class/_exports.js",
             "import": "./dist/pkg/esm/shared/class/_exports.js"
         },
+        "./cli": {
+            "require": "./dist/pkg/cjs/shared/cli/_exports.js",
+            "import": "./dist/pkg/esm/shared/cli/_exports.js"
+        },
         "./clipboard": {
             "node": {
                 "require": "./dist/pkg/cjs/node/clipboard/_exports.js",
