--- a/packages/servers/s-frontend-server/package.json
+++ b/packages/servers/s-frontend-server/package.json
@@ -27,6 +27,7 @@
         "body-parser": "^1.20.0",
         "compression": "^1.7.4",
         "express": "^4.18.1",
+        "express-remove-route": "^1.0.0",
         "http-proxy-middleware": "^2.0.6",
         "marked": "^4.0.18",
         "minimatch": "^3.1.2",
