SFrontspec php class with twig function

--- a/packages/tools/sugar/composer.json
+++ b/packages/tools/sugar/composer.json
@@ -7,12 +7,17 @@
     },
     "require": {
         "twig/twig": "^3.4",
-        "coffeekraken/s-specs": "^2.0@alpha"
+        "coffeekraken/s-specs": "^2.0@alpha",
+        "coffeekraken/s-frontspec": "^2.0@alpha"
     },
     "repositories": [
         {
             "type": "path",
             "url": "../s-specs"
+        },
+        {
+            "type": "path",
+            "url": "../../core/s-frontspec"
         }
     ],
     "minimum-stability": "alpha",
