--- a/packages/tools/s-mitosis/package.json
+++ b/packages/tools/s-mitosis/package.json
@@ -13,7 +13,10 @@
         "@coffeekraken/s-component": "^2.0.0-alpha.20",
         "@coffeekraken/s-interface": "^2.0.0-alpha.20",
         "@coffeekraken/s-log": "^2.0.0-alpha.20",
+        "@coffeekraken/s-postcss-builder": "^2.0.0-alpha.20",
         "@coffeekraken/s-promise": "^2.0.0-alpha.20",
+        "@coffeekraken/s-specs": "^2.0.0-alpha.20",
+        "@coffeekraken/s-specs-editor-component": "^2.0.0-alpha.20",
         "@coffeekraken/s-view-renderer": "^2.0.0-alpha.20",
         "@coffeekraken/sugar": "^2.0.0-alpha.20",
         "chokidar": "^3.5.3",
