--- a/packages/tools/s-specs/package.json
+++ b/packages/tools/s-specs/package.json
@@ -8,6 +8,7 @@
     "dependencies": {
         "@coffeekraken/s-class": "^2.0.0-alpha.20",
         "@coffeekraken/s-file": "^2.0.0-alpha.20",
+        "@coffeekraken/s-interface": "^2.0.0-alpha.20",
         "@coffeekraken/s-promise": "^2.0.0-alpha.20",
         "@coffeekraken/s-sugar-config": "^2.0.0-alpha.20",
         "@coffeekraken/sugar": "^2.0.0-alpha.20"
