--- a/packages/tools/s-mitosis/package.json
+++ b/packages/tools/s-mitosis/package.json
@@ -23,6 +23,8 @@
         "chokidar": "^3.5.3",
         "express": "^4.18.2",
         "glob": "^8.0.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "vite": "^3.1.7",
         "vite-plugin-dynamic-import": "^1.2.2"
     },
