--- a/packages/components/s-slider-component/package.json
+++ b/packages/components/s-slider-component/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@builder.io/mitosis": "^0.0.61",
+    "@builder.io/mitosis": "^0.0.74",
     "@builder.io/mitosis-cli": "^0.0.22",
     "@coffeekraken/s-clipboard-copy-component": "^2.0.0-alpha.20",
     "@coffeekraken/s-component": "^2.0.0-alpha.20",
@@ -24,7 +24,8 @@
     "html-tags": "^3.2.0",
     "known-css-properties": "^0.25.0",
     "prettier": "^2.7.1",
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "exports": {
     ".": {
