--- a/packages/core/s-event-emitter/package.json
+++ b/packages/core/s-event-emitter/package.json
@@ -9,6 +9,8 @@
         "@coffeekraken/s-class": "^2.0.0-alpha.20",
         "@coffeekraken/s-log": "^2.0.0-alpha.20",
         "@coffeekraken/sugar": "^2.0.0-alpha.20",
+        "glob-to-regexp": "^0.4.1",
+        "micromatch": "^4.0.5",
         "minimatch": "^5.1.0",
         "node-ipc": "^11.1.0"
     },
