--- a/packages/tools/s-component-proxy/package.json
+++ b/packages/tools/s-component-proxy/package.json
@@ -16,7 +16,8 @@
         "@coffeekraken/s-sugar-config": "^2.0.0-alpha.20",
         "@coffeekraken/sugar": "^2.0.0-alpha.20",
         "fastdom": "^1.0.11",
-        "react": "^18.2.0"
+        "react": "^18.2.0",
+        "vue": "^3.2.41"
     },
     "exports": {
         ".": {
