--- a/packages/servers/s-frontend-server/package.json
+++ b/packages/servers/s-frontend-server/package.json
@@ -10,6 +10,7 @@
         "@coffeekraken/s-class": "^2.0.0-alpha.20",
         "@coffeekraken/s-docblock": "^2.0.0-alpha.20",
         "@coffeekraken/s-docmap": "^2.0.0-alpha.20",
+        "@coffeekraken/s-carpenter": "^2.0.0-alpha.20",
         "@coffeekraken/s-duration": "^2.0.0-alpha.20",
         "@coffeekraken/s-env": "^2.0.0-alpha.20",
         "@coffeekraken/s-file": "^2.0.0-alpha.20",
