--- a/packages/@websites/coffeekraken-io/package.json
+++ b/packages/@websites/coffeekraken-io/package.json
@@ -25,6 +25,7 @@
         "@coffeekraken/s-appear-feature": "^2.0.0-alpha.20",
         "@coffeekraken/s-bench": "^2.0.0-alpha.20",
         "@coffeekraken/s-builder": "^2.0.0-alpha.20",
+        "@coffeekraken/s-carpenter": "^2.0.0-alpha.20",
         "@coffeekraken/s-class": "^2.0.0-alpha.20",
         "@coffeekraken/s-clipboard-copy-component": "^2.0.0-alpha.20",
         "@coffeekraken/s-code-example-component": "^2.0.0-alpha.20",
