--- a/packages/components/s-dropzone-component/package.json
+++ b/packages/components/s-dropzone-component/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@coffeekraken/s-interface": "^2.0.0-alpha.20",
         "@coffeekraken/s-lit-component": "^2.0.0-alpha.20",
+        "@coffeekraken/s-promise": "^2.0.0-alpha.20",
         "@coffeekraken/sugar": "^2.0.0-alpha.20",
         "lit": "^2.2.8"
     },
