--- a/packages/core/s-frontspec/package.json
+++ b/packages/core/s-frontspec/package.json
@@ -16,6 +16,7 @@
         "@coffeekraken/s-promise": "^2.0.0-alpha.20",
         "@coffeekraken/s-stdio": "^2.0.0-alpha.20",
         "@coffeekraken/s-sugar-config": "^2.0.0-alpha.20",
+        "@coffeekraken/s-theme": "^2.0.0-alpha.20",
         "@coffeekraken/sugar": "^2.0.0-alpha.20",
         "glob": "^7.2.3"
     },
