--- a/packages/components/s-specs-editor-component/package.json
+++ b/packages/components/s-specs-editor-component/package.json
@@ -16,6 +16,7 @@
         "@coffeekraken/s-dropzone-component": "^2.0.0-alpha.20",
         "@coffeekraken/s-interface": "^2.0.0-alpha.20",
         "@coffeekraken/sugar": "^2.0.0-alpha.20",
+        "@coffeekraken/s-theme": "^2.0.0-alpha.20",
         "html-tags": "^3.2.0",
         "known-css-properties": "^0.25.0"
     },
