--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -70,12 +70,14 @@
         "is-valid-path": "^0.1.1",
         "jest-useragent-mock": "^0.1.1",
         "json-cyclic": "^1.0.2",
+        "keypress": "^0.2.1",
         "lodash.clone": "^4.5.0",
         "lodash.clonedeep": "^4.5.0",
         "memoizee": "^0.4.15",
         "micromatch": "^4.0.5",
         "minimatch": "^3.1.2",
         "mobile-detect": "^1.4.5",
+        "node-ipc": "^11.1.0",
         "object-encode": "^1.0.2",
         "object-hash": "^2.2.0",
         "open-graph-scraper": "^4.11.1",
