--- a/packages/builders/s-markdown-builder/package.json
+++ b/packages/builders/s-markdown-builder/package.json
@@ -12,6 +12,7 @@
         "@coffeekraken/s-docmap": "^2.0.0-alpha.20",
         "@coffeekraken/s-event-emitter": "^2.0.0-alpha.20",
         "@coffeekraken/s-file": "^2.0.0-alpha.20",
+        "@coffeekraken/s-env": "^2.0.0-alpha.20",
         "@coffeekraken/s-glob": "^2.0.0-alpha.20",
         "@coffeekraken/s-handlebars": "^2.0.0-alpha.20",
         "@coffeekraken/s-interface": "^2.0.0-alpha.20",
