--- a/packages/@websites/coffeekraken-io/package.json
+++ b/packages/@websites/coffeekraken-io/package.json
@@ -50,6 +50,7 @@
         "@coffeekraken/s-form-validate-feature": "^2.0.0-alpha.20",
         "@coffeekraken/s-frontend-server": "^2.0.0-alpha.20",
         "@coffeekraken/s-frontspec": "^2.0.0-alpha.20",
+        "@coffeekraken/s-glitch-feature": "^2.0.0-alpha.20",
         "@coffeekraken/s-glob": "^2.0.0-alpha.20",
         "@coffeekraken/s-google-map-component": "^2.0.0-alpha.20",
         "@coffeekraken/s-handlebars": "^2.0.0-alpha.20",
