--- a/packages/features/s-glitch-feature/package.json
+++ b/packages/features/s-glitch-feature/package.json
@@ -1,21 +1,24 @@
 {
-    "name": "@coffeekraken/s-floating-feature",
+    "name": "@coffeekraken/s-glitch-feature",
     "version": "2.0.0-alpha.20",
-    "description": "Simple feature that let you define an HTMLElement as floating element. Make use of the AMAZING floating-ui package under the hood.",
+    "description": "This feature allows you to apply some nice glitch effect on any HTMLElement",
     "type": "module",
     "scripts": {
-        "dev": "sugar frontstack dev",
-        "build": "sugar frontstack build",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://coffeekraken.io)",
     "license": "MIT",
     "dependencies": {
         "@coffeekraken/s-class": "^2.0.0-alpha.20",
+        "@coffeekraken/s-component-utils": "^2.0.0-alpha.20",
         "@coffeekraken/s-feature": "^2.0.0-alpha.20",
         "@coffeekraken/s-interface": "^2.0.0-alpha.20",
-        "@coffeekraken/s-timer": "^2.0.0-alpha.20",
-        "@coffeekraken/sugar": "^2.0.0-alpha.20"
+        "@coffeekraken/s-sugar-config": "^2.0.0-alpha.20",
+        "@coffeekraken/s-sugar-element": "^2.0.0-alpha.20",
+        "@coffeekraken/s-theme": "^2.0.0-alpha.20",
+        "@coffeekraken/sugar": "^2.0.0-alpha.20",
+        "html2canvas": "^1.4.1",
+        "three-full": "^11.3.2"
     },
     "main": "dist/pkg/cjs/js/exports.js",
     "module": "dist/pkg/esm/js/exports.js",
