--- a/packages/app/s-carpenter/package.json
+++ b/packages/app/s-carpenter/package.json
@@ -26,6 +26,7 @@
         "@coffeekraken/s-vite": "^2.0.0-alpha.25",
         "@coffeekraken/sugar": "^2.0.0-alpha.25",
         "@vitejs/plugin-vue": "^3.1.2",
+        "body-parser": "^1.20.2",
         "chokidar": "^3.5.3",
         "express": "^4.18.2",
         "express-http-proxy": "^1.6.3",
