--- a/packages/app/s-carpenter/package.json
+++ b/packages/app/s-carpenter/package.json
@@ -14,6 +14,7 @@
         "@coffeekraken/s-activate-feature": "^2.0.0-alpha.25",
         "@coffeekraken/s-bench": "^2.0.0-alpha.25",
         "@coffeekraken/s-class": "^2.0.0-alpha.25",
+        "@coffeekraken/s-frontspec": "^2.0.0-alpha.25",
         "@coffeekraken/s-interface": "^2.0.0-alpha.25",
         "@coffeekraken/s-log": "^2.0.0-alpha.25",
         "@coffeekraken/s-postcss-builder": "^2.0.0-alpha.25",
