--- a/packages/components/s-specs-editor-component/package.json
+++ b/packages/components/s-specs-editor-component/package.json
@@ -20,6 +20,7 @@
         "@coffeekraken/s-interface": "^2.0.0-alpha.26",
         "@coffeekraken/s-spaces-selector-component": "^2.0.0-alpha.26",
         "@coffeekraken/s-theme": "^2.0.0-alpha.26",
+        "@coffeekraken/s-wysiwyg-component": "^2.0.0-alpha.26",
         "@coffeekraken/sugar": "^2.0.0-alpha.26",
         "@editorjs/editorjs": "^2.26.5",
         "html-tags": "^3.2.0",
