--- a/.prettierrc
+++ b/.prettierrc
@@ -3,15 +3,5 @@
   "tabWidth": 4,
   "trailingComma": "all",
   "singleQuote": true,
-  "endOfLine": "lf",
-  "overrides": [
-    {
-      "files": [
-        "*.riot"
-      ],
-      "options": {
-        "parser": "html"
-      }
-    }
-  ]
+  "endOfLine": "lf"
 }
