--- a/packages/tools/s-specs/package.json
+++ b/packages/tools/s-specs/package.json
@@ -12,7 +12,8 @@
         "@coffeekraken/s-interface": "^2.0.0-alpha.27",
         "@coffeekraken/s-promise": "^2.0.0-alpha.27",
         "@coffeekraken/s-sugar-config": "^2.0.0-alpha.27",
-        "@coffeekraken/sugar": "^2.0.0-alpha.27"
+        "@coffeekraken/sugar": "^2.0.0-alpha.27",
+        "glob": "^10.2.4"
     },
     "main": "dist/pkg/cjs/node/exports.js",
     "module": "dist/pkg/esm/node/exports.js",
