--- a/packages/tools/s-frontend-checker/package.json
+++ b/packages/tools/s-frontend-checker/package.json
@@ -7,12 +7,15 @@
     "license": "MIT",
     "dependencies": {
         "@coffeekraken/s-class": "^2.0.0-alpha.27",
+        "@coffeekraken/s-duration": "^2.0.0-alpha.27",
         "@coffeekraken/s-file": "^2.0.0-alpha.27",
+        "@coffeekraken/s-color": "^2.0.0-alpha.27",
         "@coffeekraken/s-interface": "^2.0.0-alpha.27",
         "@coffeekraken/s-promise": "^2.0.0-alpha.27",
         "@coffeekraken/sugar": "^2.0.0-alpha.27",
         "aria-query": "^5.2.1",
-        "dom-accessibility-api": "^0.6.1"
+        "dom-accessibility-api": "^0.6.1",
+        "html2canvas": "^1.4.1"
     },
     "homepage": "https://coffeekraken.io",
     "main": "dist/pkg/cjs/js/exports.js",
