--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "packages/@specimen/types"]
-	path = packages/@specimen/types
+[submodule "packages/@specim3n/types"]
+	path = packages/@specim3n/types
 	url = https://github.com/specim3n/types
