--- a/packages/components/s-date-picker-component/package.json
+++ b/packages/components/s-date-picker-component/package.json
@@ -18,7 +18,7 @@
         "@coffeekraken/s-lit-component": "^2.0.0-alpha.27",
         "@coffeekraken/s-theme": "^2.0.0-alpha.27",
         "@coffeekraken/sugar": "^2.0.0-alpha.27",
-        "@specimen/types": "^1.0.0-alpha.1",
+        "@specim3n/types": "^1.0.0-alpha.1",
         "date-format-parse": "^0.2.7",
         "dateformat": "^5.0.3",
         "lit": "^2.2.8"
