--- a/packages/tools/s-media/package.json
+++ b/packages/tools/s-media/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@coffeekraken/s-media",
     "version": "2.0.0-alpha.27",
-    "description": "A simple class to handle the media (queries) like methods like buildMediaQuery, layoutCss, etc... All of this on top of the @specimen/types ISMedia type and the @coffeekraken/s-frontspec package",
+    "description": "A simple class to handle the media (queries) like methods like buildMediaQuery, layoutCss, etc... All of this on top of the @specim3n/types ISMedia type and the @coffeekraken/s-frontspec package",
     "type": "module",
     "author": "Olivier Bossel <olivier.bossel@gmail.com> (https://coffeekraken.io)",
     "license": "MIT",
