--- a/packages/@websites/css-coffeekraken-io/docker/Dockerfile
+++ b/packages/@websites/css-coffeekraken-io/docker/Dockerfile
@@ -8,8 +8,7 @@ RUN chmod +x /docker-up.sh
 ENTRYPOINT ["/docker-up.sh"]
 
 # start script
-COPY ./docker-start.sh /docker-start.sh
-RUN chmod +x /docker-start.sh
+RUN chmod +x ./docker/start.sh
 
 # Configure apt
 ENV DEBIAN_FRONTEND=noninteractive
