--- a/packages/@websites/css-coffeekraken-io/docker/Dockerfile
+++ b/packages/@websites/css-coffeekraken-io/docker/Dockerfile
@@ -8,7 +8,7 @@ RUN chmod +x /docker-up.sh
 ENTRYPOINT ["/docker-up.sh"]
 
 # start script
-RUN chmod +x ./start.sh
+# RUN chmod +x ./start.sh
 
 # Configure apt
 ENV DEBIAN_FRONTEND=noninteractive
