--- a/.nginxProxy/data/nginx/proxy_host/1.conf
+++ b/.nginxProxy/data/nginx/proxy_host/1.conf
@@ -5,7 +5,7 @@
 
 server {
   set $forward_scheme http;
-  set $server         "postcss-web";
+  set $server         "coffeekraken-postcss-io";
   set $port           8080;
 
   listen 80;
@@ -36,7 +36,7 @@ listen [::]:80;
     proxy_set_header X-Forwarded-Proto  $scheme;
     proxy_set_header X-Forwarded-For    $remote_addr;
     proxy_set_header X-Real-IP		$remote_addr;
-    proxy_pass       http://postcss-web:9191;
+    proxy_pass       http://coffeekraken-postcss-io:9191;
 
     
 
