--- a/packages/app/s-doc/package.json
+++ b/packages/app/s-doc/package.json
@@ -20,6 +20,7 @@
         "@coffeekraken/s-promise": "^2.0.0-alpha.27",
         "@coffeekraken/sugar": "^2.0.0-alpha.27",
         "body-parser": "^1.20.2",
+        "compression": "^1.7.4",
         "cors": "^2.8.5",
         "express": "^4.18.2",
         "lit": "^2.2.8"
