--- a/packages/@app/sherlock/.vscode/settings.json
+++ b/packages/@app/sherlock/.vscode/settings.json
@@ -1,11 +1,12 @@
 {
-  "[typescript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "files.associations": {
+    "*.riot": "html",
+    "*.css": "postcss"
   },
-  "[javascript]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[json]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  // "editor.formatOnSave": true,
+  "editor.codeActionsOnSave": {
+      "source.organizeImports": true,
+      "source.fixAll.eslint": false
   }
 }
