--- a/packages/@app/sherlock/.vscode/settings.json
+++ b/packages/@app/sherlock/.vscode/settings.json
@@ -4,7 +4,7 @@
     "*.css": "postcss"
   },
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  // "editor.formatOnSave": true,
+  "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
       "source.organizeImports": true,
       "source.fixAll.eslint": false
