--- a/packages/@app/sherlock/package.json
+++ b/packages/@app/sherlock/package.json
@@ -20,6 +20,7 @@
     "build:linux": "npm run build && electron-builder --linux --config"
   },
   "dependencies": {
+    "@coffeekraken/s-dobby": "2.0.0-alpha.27",
     "@coffeekraken/s-postcss-sugar-plugin": "2.0.0-alpha.27",
     "@coffeekraken/s-state": "2.0.0-alpha.27",
     "@coffeekraken/s-sugar-feature": "2.0.0-alpha.27",
@@ -30,7 +31,8 @@
     "canvas": "^2.11.2",
     "contentful": "^10.3.4",
     "electron-updater": "^5.3.0",
-    "lit": "^2.7.6"
+    "lit": "^2.7.6",
+    "ws": "^8.13.0"
   },
   "devDependencies": {
     "@electron-toolkit/tsconfig": "^1.0.1",
