--- a/packages/@app/sherlock/package.json
+++ b/packages/@app/sherlock/package.json
@@ -23,6 +23,7 @@
     "@coffeekraken/s-dobby": "2.0.0-alpha.27",
     "@coffeekraken/s-postcss-sugar-plugin": "2.0.0-alpha.27",
     "@coffeekraken/s-state": "2.0.0-alpha.27",
+    "@coffeekraken/s-specs-editor": "2.0.0-alpha.27",
     "@coffeekraken/s-sugar-feature": "2.0.0-alpha.27",
     "@coffeekraken/s-vite-postcss-plugin": "2.0.0-alpha.27",
     "@electron-toolkit/preload": "^2.0.0",
