--- a/packages/app/s-dobby/package.json
+++ b/packages/app/s-dobby/package.json
@@ -15,8 +15,11 @@
         "@coffeekraken/s-sugar-config": "^2.0.0-alpha.27",
         "@coffeekraken/sugar": "^2.0.0-alpha.27",
         "gun": "^0.2020.1239",
+        "lighthouse": "^10.4.0",
         "node-schedule": "^2.1.1",
         "ping": "^0.4.4",
+        "playwright": "^1.36.1",
+        "playwright-lighthouse": "^3.1.0",
         "ws": "^8.13.0"
     },
     "main": "dist/pkg/cjs/js/exports.js",
