--- a/packages/@app/sherlock/package.json
+++ b/packages/@app/sherlock/package.json
@@ -32,6 +32,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "canvas": "^2.11.2",
     "contentful": "^10.3.4",
+    "contentful-management": "^10.39.1",
     "cron-parser": "^4.8.1",
     "electron-updater": "^5.3.0",
     "lit": "^2.7.6",
