--- a/packages/@app/sherlock/package.json
+++ b/packages/@app/sherlock/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@coffeekraken/s-dobby": "2.0.0-alpha.27",
+    "@coffeekraken/s-gauge-component": "2.0.0-alpha.27",
     "@coffeekraken/s-postcss-sugar-plugin": "2.0.0-alpha.27",
     "@coffeekraken/s-specs-editor-component": "2.0.0-alpha.27",
     "@coffeekraken/s-store": "2.0.0-alpha.27",
