--- a/packages/app/s-dobby/package.json
+++ b/packages/app/s-dobby/package.json
@@ -14,6 +14,7 @@
         "@coffeekraken/s-specs": "^2.0.0-alpha.27",
         "@coffeekraken/s-sugar-config": "^2.0.0-alpha.27",
         "@coffeekraken/sugar": "^2.0.0-alpha.27",
+        "geoip-lite": "^1.4.7",
         "gun": "^0.2020.1239",
         "lighthouse": "^10.4.0",
         "node-schedule": "^2.1.1",
