--- a/packages/tools/sugar/package.json
+++ b/packages/tools/sugar/package.json
@@ -94,6 +94,7 @@
         "parse-es6-imports": "^1.0.1",
         "pretty-format": "^26.6.2",
         "ps-list": "^7.2.0",
+        "public-ip": "^6.0.1",
         "rematrix": "^0.7.2",
         "resolve": "^1.22.1",
         "resolve-package-path": "^4.0.3",
