--- a/packages/tools/s-validator/package.json
+++ b/packages/tools/s-validator/package.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "dependencies": {
         "@coffeekraken/s-class": "^2.0.0-alpha.27",
+        "@coffeekraken/s-i18n": "^2.0.0-alpha.27",
         "@coffeekraken/s-interface": "^2.0.0-alpha.27",
         "@coffeekraken/sugar": "^2.0.0-alpha.27"
     },
