--- a/packages/app/s-dobby/package.json
+++ b/packages/app/s-dobby/package.json
@@ -16,8 +16,10 @@
         "@coffeekraken/sugar": "^2.0.0-alpha.27",
         "geoip-lite": "^1.4.7",
         "gun": "^0.2020.1239",
+        "ipfs": "^0.66.1",
         "lighthouse": "^10.4.0",
         "node-schedule": "^2.1.1",
+        "orbit-db": "^0.29.0",
         "ping": "^0.4.4",
         "playwright": "^1.36.1",
         "playwright-lighthouse": "^3.1.0",
