--- a/packages/@examples/01-basic/package.json
+++ b/packages/@examples/01-basic/package.json
@@ -40,6 +40,7 @@
         "@coffeekraken/s-postcss-sugar-plugin": "^2.0.0-alpha.27",
         "@coffeekraken/s-sugar-feature": "^2.0.0-alpha.27",
         "@coffeekraken/sugar": "^2.0.0-alpha.27",
+        "@faker-js/faker": "^8.0.2",
         "autoprefixer": "^10.4.12",
         "postcss": "^8.4.17",
         "postcss-atroot": "^0.2.3",
