--- a/packages/app/s-kitchen/package.json
+++ b/packages/app/s-kitchen/package.json
@@ -26,7 +26,11 @@
         "@coffeekraken/s-sugar-json": "^2.0.0-beta.1",
         "@coffeekraken/s-vite": "^2.0.0-beta.1",
         "@coffeekraken/sugar": "^2.0.0-beta.1",
-        "recursive-copy": "^2.0.14"
+        "recursive-copy": "^2.0.14",
+        "@coffeekraken/s-feature": "^2.0.0-beta.1",
+        "@coffeekraken/s-front": "^2.0.0-beta.1",
+        "@coffeekraken/s-lit-component": "^2.0.0-beta.1",
+        "@coffeekraken/s-pack-essentials": "^2.0.0-beta.1"
     },
     "main": "dist/pkg/cjs/node/exports.js",
     "module": "dist/pkg/esm/node/exports.js",
