--- a/packages/@examples/01-basic/package.json
+++ b/packages/@examples/01-basic/package.json
@@ -25,10 +25,9 @@
     "contributors": [],
     "scripts": {
         "dev": "sugar kitchen.run dev",
-        "prod": "sugar kitchen.run prod",
         "build": "sugar kitchen.run build",
-        "static": "live-server static",
-        "static.build": "sugar static.build --clean --env production --target production",
+        "preview": "sugar kitchen.run preview",
+        "static": "npm run preview & sleep 5 && npm run static.build && npm run static.serve",
         "deploy": "rsync -avzh --delete --progress --stats ./static fe0mt_coffeekraken@fe0mt.ftp.infomaniak.com:~/sites/01-basic.coffeekraken.io"
     },
     "dependencies": {
