--- a/packages/servers/s-static-server/package.json
+++ b/packages/servers/s-static-server/package.json
@@ -12,7 +12,8 @@
         "@coffeekraken/sugar": "^2.0.0-beta.1",
         "body-parser": "^1.20.0",
         "compression": "^1.7.4",
-        "express": "^4.18.1"
+        "express": "^4.18.1",
+        "express-htaccess-middleware": "^0.1.0"
     },
     "main": "dist/pkg/cjs/node/exports.js",
     "module": "dist/pkg/esm/node/exports.js",
